# Space-Project

./: .gitignore  .gitignore.txt  CMakeLists.txt  space_project.sln
.devcontainer/: Dockerfile  README.md
space_project/: Source.cpp  space_project.vcxproj
